# fluree-migrate

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  console.rs  fluree.rs  functions.rs  lib.rs  main.rs
